--- a/autres_pages/langues-africaines.html
+++ b/autres_pages/langues-africaines.html
@@ -10,13 +10,13 @@
     </head>
 
     <body>
-        <header class="container-fluid-lg headerheight">
+      <header class="container-fluid header">
             <!--NavBar-->
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark text-light">
-                <a class="navbar-brand" href="../index.html"><p class="navBarText ml-2">Eclafrik</p></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+              <a class="navbar-brand" href="../index.html"><img  class="logo" src="../images/png/logo_eclafrik-langues-africaines.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                     <ul class="navbar-nav ">
                         <li class="nav-item active col-4  ">
