Add folder autres_pages FINAL

--- a/autres_pages/a-propos-eclafrik.html
+++ b/autres_pages/a-propos-eclafrik.html
@@ -11,32 +11,34 @@
 
     <body>
 
-      <header class="container-fluid-lg headerheight">
+     <!--Header-->
+     <header class="container-fluid header">
 
-        <!--NavBar-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark text-light">
-          <a class="navbar-brand" href="../index.html"><p class="navBarText ml-2">Eclafrik</p></a>
+      <!--NavBar-->
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark text-light">
+          <a class="navbar-brand" href="index.html"><img  class="logo" src="../images/png/logo_eclafrik-langues-africaines.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
           <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
-
-            <ul class="navbar-nav ">
-              <li class="nav-item active col-4  ">
-                <a class="nav-link" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item col-4 ">
-                <a class="nav-link navColor" href="a-propos-eclafrik.html">À propos</a>
-              </li>
-              <li class="nav-item col-6 ">
-                <a class="nav-link" href="./langues-africaines.html">Cours gratuits</a>
-              </li>
-            </ul> 
-
+              <ul class="navbar-nav ">
+                  <li class="nav-item active col-4  ">
+                    <a class="nav-link" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item col-4 ">
+                    <a class="nav-link" href="a-propos-eclafrik.html">À propos</a>
+                  </li>
+                  <li class="nav-item col-6 ">
+                    <a class="nav-link" href="langues-africaines.html">Cours gratuits</a>
+                  </li>
+              </ul>
+              
           </div>
-        </nav>  
-      </header>
+      </nav>
+    <!--EndNavBar-->
+
+  </header>
+  <!--EndHeader-->
 
       <!--BreadScrum-->
       <nav  class="" style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
@@ -49,33 +51,35 @@
       </nav>
 
       <!--MAIN--> 
-      <main id="" class="container shadow-lg p-3 mb-3 fond-motif  clearfix policesSm ">
+      <main id="" class="container shadow-lg p-3 mb-3   clearfix policesSm ">
+
         <div class="bg-body p-sm-5">
-          <img src="../images/jpeg_jpg/wegnon.jpeg" id="article-images" class="col-6-sm col-sm d-none d-sm-block float-md-end mb-3 ms-md-3 img-thumbnail w-50 h-50" alt="...">
+
+          <img src="../images/png/eclafrik_1.png" id="article-images" class="col-6-sm col-sm d-none d-sm-block float-md-end mb-3 ms-md-3  w-50" alt="...">
                   
-          <h2 class="h2Title">Qui sommes nous?</h2>
-          <p>Crée en 2009, nous sommes une association visant l'apprentissage des langues africaines et leurs cultures respectives dans le monde entier,
+          <h2 class="h2Title">Qui sommes-nous?</h2>
+          <p>Créé en 2009, nous sommes une association visant l'apprentissage des langues africaines et leurs cultures respectives dans le monde entier,
             pour mettre en exergue les valeurs africaines, aux fins de leur intégration dans le concert culturel des nations. Nous faisons aussi de l'alphabétisation
-            dans la langue du pays d'accueil et l'initiation à d'autres langues tels que l'hébreu,le grec ancien et l'anglais là où il n'est pas la langue officielle.
+            dans la langue du pays d'accueil et l'initiation à d'autres langues tel que l'hébreu, le grec ancien et l'anglais là où il n'est pas la langue officielle.
           </p>
-          <h2 class="titreH2">Nous enseignons</h2>
-          <p>14 langues africaines par des enseignants originaires des différents pays respectives: 
+          <h2 class="h2Title">Nous enseignons</h2>
+          <p>14 langues africaines par des enseignants originaires des différents pays respectifs: 
             <ul>
-                <li><strong>Côte-d'ivoire:</strong> Wês, bété, yacouba, attié, dioula.</li>
-                <li><strong>Congo:</strong> lingala, swahili, kicongo.</li>
-                <li><strong>Togo :</strong> éwé, mina</li>
-                <li><strong>Bénin:</strong> fon</li>
-                <li><strong>Sénégal:</strong> wollof</li>
-                <li><strong>Cameroun:</strong>Bamiléké</li>
-                <li><strong>Ghana:</strong>Ashanti</li>
-                <li><strong>Afrique du sud:</strong> zulu</li>
+                <li><strong>Côte-d'ivoire: </strong> Wês, bété, yacouba, attié, dioula.</li>
+                <li><strong>Congo: </strong> lingala, swahili, kicongo.</li>
+                <li><strong>Togo : </strong> éwé, mina</li>
+                <li><strong>Bénin: </strong> fon</li>
+                <li><strong>Sénégal: </strong> wolof</li>
+                <li><strong>Cameroun: </strong>Bamiléké</li>
+                <li><strong>Ghana: </strong>Ashanti</li>
+                <li><strong>Afrique du sud: </strong> zulu</li>
             </ul>
           </p>
           <div class="col-8-sm ">
-          <h2 class="titreH2">Des cours interractifs</h2>
-          <p> élaborarer par nos formateurs venant des quatre coins
-              de l'Afrique, sont mis a votre dispotions sur notre site web, classés par thèmes.
-              On y trouve, les expressions basique, se présenter, la famille, se situer dans le temps, etc...   
+          <h2 class="h2Title">Des cours interractifs</h2>
+          <p>  sont élaborés par nos formateurs venants des quatre coins
+              de l'Afrique, sont mis à votre disposition sur notre site web, classés par thèmes.
+              On y trouve, les expressions basiques, se présenter, la famille, se situer dans le temps, etc.   
           </p>
           </article>
         </div>
