--- a/autres_pages/devenir-membre-eclafrik.html
+++ b/autres_pages/devenir-membre-eclafrik.html
@@ -11,8 +11,7 @@
 
     <body>
 
-      <header class="container-fluid-lg headerheight">
-
+      <header class="container-fluid header">
         <!--NavBar-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark text-light">
           <a class="navbar-brand" href="../index.html"><p class="navBarText ml-2">Eclafrik</p></a>
