--- a/autres_pages/a-propos-eclafrik.html
+++ b/autres_pages/a-propos-eclafrik.html
@@ -16,7 +16,7 @@
 
       <!--NavBar-->
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark text-light">
-          <a class="navbar-brand" href="index.html"><img  class="logo" src="../images/png/logo_eclafrik-langues-africaines.png" alt=""></a>
+          <a class="navbar-brand" href="../index.html"><img  class="logo" src="../images/png/logo_eclafrik-langues-africaines.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
